Fixed • Appointment timer shows always 1st appointment Time - Fixed • See next provider not showing when back from appointment page - Fixed • Unable to Edit the Appointment which is created by Physician and it throws "Appointment type not allowed" - Major – Fixed

--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -4885,6 +4885,12 @@ padding: 200px 7px 7px 7px;
     font-size: 145%;
     font-family: Glober Bold;
 }
+#centercolorforEnterAppointment {
+    color: white;
+    margin-top: 6px !important;
+    font-size: 145%;
+    font-family: Glober Bold;
+}
 .userionitem {
     padding: 10px;
 }
